# dns-rust

./: .gitignore  1034-scenario-6.1-edu.txt  1034-scenario-6.1-root.txt  2-zones-example.txt  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  config.rs  docker-compose.yml  include.txt  test.txt  test2.txt
.cargo/: config.toml
.github/hooks/: pre-push
.github/workflows/: Docker.yml  rust.yml
coverage/: coverage-68642-14524457209617753014_0.profraw  coverage-68909-1206531941836594292_0.profraw  coverage-68910-2886138695593165736_0.profraw  coverage-76111-14524457209617753014_0.profraw  coverage-76378-1206531941836594292_0.profraw  coverage-76379-2886138695593165736_0.profraw  lcov.info
coverage/html/: coverage.json  index.html
doc/: crates.js  search-index.js  settings.html  source-files.js
doc/udp_server/: all.html  fn.handle_client.html  fn.main.html  index.html  sidebar-items.js
example/: dotcp.rs  dotls.rs  doudp.rs
examples/: dotcp.rs  dotls.rs  doudp.rs  edns.rs  edns_resolver.rs
src/: a_rdata.rs  async_resolver.rs  cache_data.rs  client.rs  config.rs  dns_cache.rs  dns_messages.rs  dnssec.rs  domain_cache.rs  domain_name.rs  edns.rs  example.rs  global_tests.rs  hash_cache_data.rs  hash_host_data.rs  hash_truncated_dns_message.rs  header.rs  integrals_tests.rs  lib.rs  main.rs  message.rs  mx_rdata.rs  name_server.rs  nameserver.rs  ns_rdata.rs  ptr_rdata.rs  question.rs  rcode.rs  rdata.rs  resolver.rs  resolver_cache.rs  resource_record.rs  rr_cache.rs  rr_stored_data.rs  server.rs  slist_element.rs  soa_rdata.rs  tcp_client.rs  truncated_dns_message.rs  tsig.rs  (+5 more)
src/async_resolver/: config.rs  lookup.rs  lookup_response.rs  resolution.rs  resolver_error.rs  slist.rs  (+4 more)
tests/: client.rs  client_edns.rs  client_test.rs  edns_test.rs  integration_test.rs  resolver_cache_test.rs  resolver_test.rs  tsig_integration_tests.rs
(+140 files in other folders)
