[package]
name = "dns_rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.43.1", features = ["full"]}
thiserror = "1.0.20"
async-trait = "0.1.77"
sha2 = "0.10.2"
base64 = "0.22.1"
lru = "0.12.3"
rustls = "0.23.12"
tokio-rustls = "0.26.0"
rustls-native-certs = "0.8.0"
ipconfig = "0.3.2"
data-encoding = "2.7.0"
base32 = "0.5"
hex = "0.4.3"
sha1 = "0.10.6"
hmac = "0.12.1"
[lib]
doctest = false
